# fizz-lang

./: .gitignore  .project.gf  CMakeLists.txt  Makefile  Makefile.opt  README.md  arena.h  arrays.h  ast.c  ast.h  lexer.c  lexer.h  main.c  parser.c  parser.h  repl.c  repl.h  rppl.c  tests.c  utils.c  utils.h
examples/: hello.mir
